Fix container height and overlapping text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,8 +4,7 @@
 }
 
 html, body {
-    min-height: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 body {
@@ -56,8 +55,9 @@ h1, h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 80px;
-    padding: 4em 1em;
+    height: 150px;
+    padding: 2em;
+    flex-shrink: 0;
     background-color: hsl(34, 37%, 15%);
 }
 
@@ -69,8 +69,6 @@ h1, h2 {
 main {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    padding: 2em 0 0;
 }
 
 section {
@@ -79,17 +77,12 @@ section {
     align-items: center;
 }
 
-/* BOARDGAME AND SCOREBOARD */
-
-.boardgame {
-    height: 100%;
-    padding-top: 2em;
-}
-
 .scoreboard-container {
-    height: 100%;
+    min-height: calc(100vh - 430px);
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding: 4em 2em;
 }
 
 .scoreboard {
@@ -98,8 +91,6 @@ section {
     width: 100%;
     max-width: 750px;
     align-items: center;
-    margin-bottom: 4em;
-    /* text-align: center; */
 }
 
 .players {
@@ -161,17 +152,12 @@ section {
     border-color: hsl(108, 53%, 40%);
 }
 
-
-
-
-/* GAME HANDS */
-
 .game-hands {
     display: flex;
     justify-content: center;
     column-gap: 2em;
     margin-top: auto;
-    padding: 2em 1em;
+    padding: 2em;
     border-top: 1px solid hsl(108, 68%, 31%);
     align-self: stretch;
 }
